--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "tsc": "tsc -w --noEmit"
   },
   "dependencies": {
+    "@toast-ui/react-editor": "^2.5.1",
+    "css-loader": "^5.0.1",
     "preact": "^10.5.12",
     "react-simplemde-editor": "^4.1.3",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.19.0",
