--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@toast-ui/react-editor": "^2.5.1",
     "css-loader": "^5.0.1",
+    "dayjs": "^1.10.4",
     "preact": "^10.5.12",
     "react-simplemde-editor": "^4.1.3",
     "style-loader": "^2.0.0",
