--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "dayjs": "^1.10.4",
     "preact": "^10.5.12",
     "preact-router": "^3.2.1",
-    "react-simplemde-editor": "^4.1.3",
+    "react-use": "^17.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
     "webpack": "^5.19.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "wouter": "^2.7.3"
   },
   "devDependencies": {
     "@types/uuid": "^8.3.0"
