--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dayjs": "^1.10.4",
     "preact": "^10.5.12",
     "preact-router": "^3.2.1",
+    "react-simplemde-editor": "^4.1.3",
     "react-use": "^17.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
