--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-simplemde-editor": "^4.1.3",
     "react-use": "^17.1.0",
     "style-loader": "^2.0.0",
+    "styled-components": "^5.2.1",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
@@ -21,6 +22,7 @@
     "wouter": "^2.7.3"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0"
   }
 }
