--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "manuscripts-gh-pages",
   "version": "1.0.0",
   "scripts": {
+    "build": "webpack",
     "tsc": "tsc -w --noEmit"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.7",
-    "@types/uuid": "^8.3.0"
+    "@types/uuid": "^8.3.0",
+    "webpack-cli": "^3.3.12"
   }
 }
