--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "css-loader": "^5.0.1",
     "dayjs": "^1.10.4",
+    "firebase": "^8.2.10",
     "preact": "^10.5.12",
+    "react-firebase-hooks": "^3.0.2",
     "react-simplemde-editor": "^4.1.3",
     "react-use": "^17.1.0",
     "style-loader": "^2.0.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0",
+    "dotenv-webpack": "^7.0.1",
     "webpack-cli": "^3.3.12"
   }
 }
